Added project: Passwords generator with JavaScript

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a class="item" target="_blank" href="sending-email-form-html/">Sending email from an HTML Form</a></li>
             <li><a class="item" target="_blank" href="simple-accordion/">Simple accordion</a></li>
             <li><a class="item" target="_blank" href="tags/">Tags with JavaScript</a></li>
+            <li><a class="item" target="_blank" href="passwordGenerator/">Password generator with JavaScript</a></li>
         </ul>
     </main>
 
