--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
             <li><a class="item" target="_blank" href="analog-clock/">Analog clock with JavaScript</a></li>
             <li><a class="item" target="_blank" href="consulting-weather-forecast/">Consulting weather forecast with JavaScript</a></li>
             <li><a class="item" target="_blank" href="dragInDrop-JavaScript/">Drag in drop with JavaScript</a></li>
-            <li><a class="item" target="_blank" href="gradientGenerator/">Gradient generator</a></li>
             <li><a class="item" target="_blank" href="menuFlutuante/">Floating menu</a></li>
+            <li><a class="item" target="_blank" href="gradientGenerator/">Gradient generator</a></li>
+            <li><a class="item" target="_blank" href="carousel-of-images/">Image Carousel with JavaScript</a></li>
+            <li><a class="item" target="_blank" href="passwordGenerator/">Password generator with JavaScript</a></li>
             <li><a class="item" target="_blank" href="qrCodeGenerator/">QR Code generator with JavaScript</a></li>
             <li><a class="item" target="_blank" href="quizApp-JavaScript/">Quiz with JavaScript</a></li>
             <li><a class="item" target="_blank" href="searchBar-JavaScript/">Search bar with JavaScript</a></li>
             <li><a class="item" target="_blank" href="sending-email-form-html/">Sending email from an HTML Form</a></li>
             <li><a class="item" target="_blank" href="simple-accordion/">Simple accordion</a></li>
             <li><a class="item" target="_blank" href="tags/">Tags with JavaScript</a></li>
-            <li><a class="item" target="_blank" href="passwordGenerator/">Password generator with JavaScript</a></li>
         </ul>
     </main>
 
