Added project: Flying dot hover effect

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a class="item" target="_blank" href="consulting-weather-forecast/">Consulting weather forecast with JavaScript</a></li>
             <li><a class="item" target="_blank" href="dragInDrop-JavaScript/">Drag in drop with JavaScript</a></li>
             <li><a class="item" target="_blank" href="menuFlutuante/">Floating menu</a></li>
+            <li><a class="item" target="_blank" href="flying-dots-hover-effect/">Flying dot hover effect</a></li>
             <li><a class="item" target="_blank" href="gradientGenerator/">Gradient generator</a></li>
             <li><a class="item" target="_blank" href="carousel-of-images/">Image Carousel with JavaScript</a></li>
             <li><a class="item" target="_blank" href="passwordGenerator/">Password generator with JavaScript</a></li>
