Added project: HTML to PDF

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a class="item" target="_blank" href="menuFlutuante/">Floating menu</a></li>
             <li><a class="item" target="_blank" href="flying-dots-hover-effect/">Flying dot hover effect</a></li>
             <li><a class="item" target="_blank" href="gradientGenerator/">Gradient generator</a></li>
+            <li><a class="item" target="_blank" href="html-to-pdf/">HTML to PDF</a></li>
             <li><a class="item" target="_blank" href="carousel-of-images/">Image Carousel with JavaScript</a></li>
             <li><a class="item" target="_blank" href="passwordGenerator/">Password generator with JavaScript</a></li>
             <li><a class="item" target="_blank" href="qrCodeGenerator/">QR Code generator with JavaScript</a></li>
