--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a class="item" target="_blank" href="gradientGenerator/">Gradient generator</a></li>
             <li><a class="item" target="_blank" href="html-to-pdf/">HTML to PDF</a></li>
             <li><a class="item" target="_blank" href="carousel-of-images/">Image Carousel with JavaScript</a></li>
+            <li><a class="item" target="_blank" href="music-player/">Music player with JavaScript</a></li>
             <li><a class="item" target="_blank" href="passwordGenerator/">Password generator with JavaScript</a></li>
             <li><a class="item" target="_blank" href="qrCodeGenerator/">QR Code generator with JavaScript</a></li>
             <li><a class="item" target="_blank" href="quizApp-JavaScript/">Quiz with JavaScript</a></li>
