Added project: Photo editor with JavaScript

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a class="item" target="_blank" href="carousel-of-images/">Image Carousel with JavaScript</a></li>
             <li><a class="item" target="_blank" href="music-player/">Music player with JavaScript</a></li>
             <li><a class="item" target="_blank" href="passwordGenerator/">Password generator with JavaScript</a></li>
+            <li><a class="item" target="_blank" href="photo-editor/">Photo editor with JavaScript</a></li>
             <li><a class="item" target="_blank" href="qrCodeGenerator/">QR Code generator with JavaScript</a></li>
             <li><a class="item" target="_blank" href="quizApp-JavaScript/">Quiz with JavaScript</a></li>
             <li><a class="item" target="_blank" href="searchBar-JavaScript/">Search bar with JavaScript</a></li>
