Added project: Convert grid HTML to CSV with JavaScript

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <ul>
             <li><a class="item" target="_blank" href="analog-clock/">Analog clock with JavaScript</a></li>
             <li><a class="item" target="_blank" href="consulting-weather-forecast/">Consulting weather forecast with JavaScript</a></li>
+            <li><a class="item" target="_blank" href="convert-grid-to-csv/">Convert grid HTML to CSV with JavaScript</a></li>
             <li><a class="item" target="_blank" href="dragInDrop-JavaScript/">Drag in drop with JavaScript</a></li>
             <li><a class="item" target="_blank" href="menuFlutuante/">Floating menu</a></li>
             <li><a class="item" target="_blank" href="flying-dots-hover-effect/">Flying dot hover effect</a></li>
