--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <li><a class="item" target="_blank" href="sending-email-form-html/">Sending email from an HTML Form</a></li>
             <li><a class="item" target="_blank" href="simple-accordion/">Simple accordion</a></li>
             <li><a class="item" target="_blank" href="tags/">Tags with JavaScript</a></li>
+            <li><a class="item" target="_blank" href="web-notes/">Web notes JavaScript</a></li>
         </ul>
     </main>
 
