refactor: change from flex display to grid and change in texts

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <h1>Simple projects for front-end</h1>
-    <h4>*using html, css and pure javascript</h2>
-    <p>This repository holds some micro projects made for front-end (and a lost node 😑). I hope you find one that interests you.</p>
+    <h4>*using html, css and javascript</h2>
+    <p>This repository holds some micro projects made for front-end. I hope you find one that interests you.</p>
 
     <main>
         <ul>
