feat: button that randomly takes you to a project

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <h4>*using html, css and javascript</h2>
     <p>This repository holds some micro projects made for front-end. I hope you find one that interests you.</p>
 
+    <div>
+        <button onclick="randomProject()">RANDOM PROJECT</button>
+    </div>
+    
     <main>
         <ul>
             <li><a class="item" target="_blank" href="analog-clock/">Analog clock with JavaScript</a></li>
